# sharif-ocw-scrapy-downloader

./: .gitattributes  .gitignore  .markdownlint.yaml  .mdformat.toml  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  LICENSE  Makefile  README.md  Vagrantfile  docker-compose.yml  env-example  hatch.toml  mkdocs.yml  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt  ruff.toml  taplo.toml  tox.ini
.github/workflows/: site.yml
base_vm/: Makefile  Vagrantfile
base_vm/scripts/: base_provision.sh
docs/: CODE_OF_CONDUCT.md  contributing.md  developement-hub.md  index.md  material-icons-guide.md  material-icons-standardization-plan.md  ocw-system-analysis.md  project-roadmap.md
docs/architecture/: adr-index.md  architecture-hub.md
docs/architecture/decisions/: adr-0001-example.md
docs/architecture/templates/: adr-comprehensive-template.md  adr-temp-01.md  adr-temp-02.md  adr-temp-03.md  adr-temp-04.md
docs/diagrams/: .pages  index.md
docs/diagrams/url_shortner/: url_shortner_index.md  url_shortner_spec.md
docs/diagrams/url_shortner/designs/: analytical_tracking.plantuml  class_diagrams.plantuml  database_schema.plantuml  system_architecture.plantuml  system_architecture_c4.plantuml  url_lifecycle.plantuml  url_redirection_flow.plantuml  url_shortening_process.plantuml
docs/docker/: docker-guide.md
docs/examples/yaml/: ci-cd.yml  github-actions-example.yaml
docs/git/: git-workflow-guide.md  gitflow-guide.md
docs/glossary/: business-glossary.md  glossary-hub.md  glossary-process.md  technical-glossary.md
docs/glossary/templates/: glossary-term-template.md
docs/past-performance/: past-performance-hub.md  past-performance-index.md
docs/past-performance/templates/: past-performance-comprehensive.md  past-performance-temp-01.md  past-performance-temp-02.md  past-performance-temp-03.md  past-performance-temp-04.md
docs/python/: documentation-standards.md  mypy-configuration-guide.md  pre-commit-config.md  rye_commands.md  tox-testing-guide.md
docs/static/stylesheets/: extra.css  material-icons.css
docs/vagrant/: vagrant-docker-ubuntu2404.md  vagrant-guide.md
scripts/: install_dev_tools.sh  install_doxygen.sh  provision.sh  tune_performance.sh  update_system.sh
src/: scrapy.cfg
src/sharif_ocw_downloader/: config.py  items.py  middlewares.py  pipelines.py  runner.py  settings.py
src/sharif_ocw_downloader/spiders/: __init__.py  course_spider.py
